# MyBotAI_Updates

./: .env.example  .gitignore  AGENT_SUMMARY.md  CHANGELOG.md  COMPLETE_FEATURE_ROADMAP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_RENDER.md  FINAL_AGENT_SUMMARY.md  FINAL_SUMMARY.md  FUTURE_FEATURES_ANALYSIS.md  LICENSE  MISSION_COMPLETE.md  OBSERVATORY.md  README.md  THREAT_MODEL.md  action.yml  advanced_ai_system.py  advanced_demo.py  advanced_game_builder.py  agent_cli.py  agent_config.json  ai_analyzer.py  ai_code_generator.py  automation_builder.py  business_intelligence_builder.py  cloud_devops_builder.py  creative_tools_builder.py  cross_platform_mobile_builder.py  data_science_builder.py  demo.py  docker-compose.yml  education_platform_builder.py  feliks_agent.py  financial_tools_builder.py  freelance_agent.py  freelance_app.db  freelance_app_export_20250811_012045.json  freelance_app_export_20250811_012055.json  freelance_app_export_20250811_012208.json  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  new_rule.md
EchoShare/: ANDROID_INSTALLATION.md  App.tsx  BUSINESS_MODEL.md  ECHOSHARE_SETUP.sh  PITCH_DECK.md  README.md  app.json  build-apk.sh  package-lock.json  package.json  setup-environment.sh
agent_programista/: .gitignore  README.md  requirements.txt
app/: README.md  docker-compose.yml  main.py  models.py  package-lock.json  package.json
client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cryptovault-ai/: .env.example  BUSINESS_PLAN.md  DEPLOYMENT.md  INVESTOR_PITCH.md  README.md  docker-compose.yml
demo_project/: README.md  setup.py
docs/: AUDIT_NOTES.md  IDEAS_BACKLOG.md  LAUNCH_PLAN.md  index.html
enterprise_ai_platform/: DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml
examples/: curl_examples.sh  mcp-guard.example.json  risky_tools.json  safe_tools.json  sample_server.py
logs/: log_summary.json
mcp_guard/: __init__.py  cli.py  client.py  config.py  manifest.py  models.py  probe.py  report.py  rules_engine.py  sandbox.py
million-app/: .gitignore  README.md  docker-compose.yml
observatory/: README.md  generate.py  results.json  scan.py  servers.yaml
profession_agents/: agents.py
projects/: e-commerce_demo_demo.json  ml_pipeline_demo_demo.json  mobile_game_demo_demo.json  security_audit_demo_demo.json
reports/: system_metrics.json  system_report_20250811_153307.json  system_report_20250811_154603.json  test_results.json
server/: package.json  tsconfig.json
tests/: test_cli_rules.py  test_client_timeout.py  test_config.py  test_probe.py  test_rules_engine.py  test_sandbox_integration.py  test_stdio_integration.py  test_version.py
web_portal/: app.py
(+190 files in other folders)
