[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-guard"
version = "0.2.0"
description = "Security scanner for MCP servers — flags overbroad permissions, prompt-injection cues, and unsafe tool definitions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ivan Tatarchuk" }]
keywords = ["mcp", "security", "scanner", "llm", "ai-agents", "prompt-injection", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/IvanTatarchuk/MyBotAI_Updates"
Repository = "https://github.com/IvanTatarchuk/MyBotAI_Updates"
Issues = "https://github.com/IvanTatarchuk/MyBotAI_Updates/issues"
Changelog = "https://github.com/IvanTatarchuk/MyBotAI_Updates/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "types-PyYAML"]

[project.scripts]
mcp-guard = "mcp_guard.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_guard*"]

[tool.setuptools.package-data]
mcp_guard = ["rules/*.yaml", "py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
